<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.farmerfriend.FSecurity_CProd_Pest_Irrigation.Pest_Protection.Cotton_american_boll_worm">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv1"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="@string/tv1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tv2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/tv3"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv3"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/cotton_abw_2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv4"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="122dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tv4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv5"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tv5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv6"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv6"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv7"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tv7"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv8"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv8"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv9"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv9"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv10"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv10"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv11"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv11"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv12"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv12"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv13"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv13"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/cotton_abw_1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv14"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tv14"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv15"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tv15"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv16"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv16"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv17"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv17"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv18"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv18"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv19"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv19"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv20"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv20"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv21"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv21"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv22"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv22"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv23"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv23"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv24"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tv24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv25"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv25"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv26"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv26"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv27"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv27"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv28"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv28"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv29"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/tv29"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:textStyle="bold"
            android:textSize="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:textStyle="bold"
            android:textSize="20dp"
            />

    </LinearLayout>
</ScrollView>